<resources>
    <string name="app_name">common_library</string>

    <string name="first_page">首頁</string>
    <string name="project">項目</string>
    <string name="square">MVVM</string>
    <string name="resource">資源</string>
    <string name="resource_center">資源中心</string>
    <string name="mine">我的</string>


    <string name="please_add_components">請添加組件（将gradle.properties文件的isModule的值改为true，并同步项目）</string>


    <string name="compress_pictures">壓縮圖片</string>
    <string name="picture_to_base64">圖片轉Base64</string>
    <string name="base64_to_picture">Base64轉圖片</string>
    <string name="reset_data">重置數據</string>
    <string name="thread_pool">線程池</string>
    <string name="params_transfer_change_problem">参数传递改变问题</string>
    <string name="create_an_exception">製造一個異常（造成App崩潰的異常）</string>
    <string name="create_an_exception2">製造一個異常（不會造成App崩潰的異常）</string>
    <string name="request_permissions">請求權限</string>
    <string name="request_permission_and_start_locating">請求權限，并开始定位</string>
    <string name="kill_app">殺死App</string>

    <string name="data_in_wrong_format">數據格式錯誤</string>
    <string name="request_was_aborted">请求失败</string>
    <string name="login">登錄</string>
    <string name="logout">退出登錄</string>
    <string name="network_sneak_off">網絡開小差了</string>
    <string name="server_sneak_off">服務器開小差了</string>
    <string name="the_passwords_entered_twice_are_inconsistent">两次输入密码不一致</string>


    <string name="select_photos1">選擇照片1</string>
    <string name="select_photos2">选择照片2</string>
    <string name="select_photos3">选择照片3（不传）</string>
    <string name="select_photos5">选择照片5</string>
    <string name="select_photos6">选择照片6</string>
    <string name="add_shop">添加店铺</string>

    <string name="register">注册</string>
    <string name="user_name">用户名</string>
    <string name="please_enter_one_user_name">请输入用户名</string>
    <string name="this_user_is_already_registered">此用戶已註冊</string>
    <string name="please_input_a_password">请输入密码</string>
    <string name="this_user_cannot_be_found">找不到此用户</string>
    <string name="please_enter_the_correct_password">请输入正确密码</string>

    <string name="password">密码</string>
    <string name="verification_code">验证码</string>

    <string name="confirm_password">确认密码</string>
    <string name="please_check_the_network_connection">请检查网络连接</string>
    <string name="jump_to_register">跳转到注册</string>

    <string name="first_page_details">首页详情</string>
    <string name="mine_details">我的详情</string>
    <string name="user_details">用户详情</string>

    <string name="square_details">MVVM模式</string>
    <string name="resource_details">资源详情</string>
    <string name="loading_failed">加载失败</string>
    <string name="no_data_available">暂无数据</string>
    <string name="three_level_linkage_list">三级联动列表</string>

    <string name="all_resource">全部资源</string>
    <string name="all">全部</string>
    <string name="beautiful_woman">福利</string>
    <string name="android">Android</string>
    <string name="ios">IOS</string>
    <string name="h5">H5</string>
    <string name="app">App</string>

    <string name="time">time</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="start_time">00:00:00</string>
    <string name="start_time2">00:00</string>

    <string name="video_play">視頻播放</string>
    <string name="save_to_phone">保存到手機</string>
    <string name="cancel">取消</string>
    <string name="saved_successfully">保存成功</string>
    <string name="failed_to_save_please_try_again">保存失敗，請重識</string>

    <string name="get_auth_code">獲取驗證碼</string>

    <string name="check_pending">待審核</string>
    <string name="checked">已審核</string>

    <string name="event_schedule">活動日程</string>

    <string name="android_and_js">android和js</string>
    <string name="android_and_js_interactive">android和js交互</string>
    <string name="android_to_js">android调用js，有参数有返回值</string>
    <string name="android_to_js2">android调用js，有参数无返回值</string>
    <string name="android_to_js3">android调用js，无参数无返回值</string>
    <string name="js_to_android">js调用android</string>
    <string name="this_is_the_h5_page">以上是H5页面</string>

    <string name="information_details">資訊詳情</string>
    <string name="show_data">展示數據</string>
    <string name="edit_text_input_limits">EditText输入限制</string>
    <string name="decimal_operation">小数运算</string>
    <string name="edit_text_input_limit_that_only_integers_and_decimals_can_be_entered_and_the_total_length_of_the_number_is_less_than_or_equal_to11_digits_customizable_integer5_digits_customizable_decimal5_digits_customizable">EditText输入限制只能整数和小数，且数字总长度小于等于11位（可自定义），整数5位（可自定义），小数5位（可自定义）</string>
    <string name="create_user">创建用户</string>
    <string name="kotlin_coroutine">kotlin coroutine</string>

    <string name="created_b">创建了&#8194;</string>
    <string name="users_b">&#8197;个用户</string>
    <string name="user_b">&#8197;用户</string>
    <string name="delete_user">删除用户</string>
    <string name="delete_all_user">删除全部用户</string>
    <string name="delete">删除</string>
    <string name="update">修改</string>
    <string name="this_function_can_only_be_used_under_componentization">组件化下才能使用此功能</string>


    <string name="ok">确定</string>
    <string name="tips">提示</string>
    <string name="user_id">用户ID</string>
    <string name="user_id_b">用户ID：</string>
    <string name="date">日期</string>
    <string name="date_b">日期：</string>
    <string name="birthday">生日</string>
    <string name="birthday_b">生日：</string>
    <string name="chinese_colon">：</string>
    <string name="age">年龄</string>
    <string name="age_b">年龄：</string>
    <string name="salary">薪资</string>
    <string name="salary_b">薪资：</string>
    <string name="address">地址</string>
    <string name="address_b">地址：</string>
    <string name="empty_string">""</string>
    <string name="please_fill_in_the_information_completely">请把信息填写完整</string>
    <string name="decimal_en">Decimal</string>
    <string name="cancel_en">cancel</string>
    <string name="confirm_en">confirm</string>
    <string name="start_input_en">start input</string>
    <string name="this_user_has_been_added">此用户已添加</string>
    <string name="this_user_has_modified">此用户已修改</string>
    <string name="android_edit_text_limits_the_input_of_integers_and_decimals_and_the_total_number_length_is_less_than_or_equal_to_eleven_digits_customizable_five_digits_of_integers_customizable_and_five_digits_of_decimals_customizable">Android EditText限制只能输入整数和小数，且数字总长度小于等于11位（可自定义），整数5位（可自定义），小数5位（可自定义）</string>


    <!--真正用于解析的属性-->
    <declare-styleable name="RCAttrs">
        <attr name="round_as_circle" format="boolean" />
        <attr name="round_corner" format="integer" />
        <attr name="round_corner_top_left" format="integer" />
        <attr name="round_corner_top_right" format="integer" />
        <attr name="round_corner_bottom_left" format="integer" />
        <attr name="round_corner_bottom_right" format="integer" />
        <attr name="stroke_color" format="color" />
        <attr name="stroke_width" format="integer" />
        <attr name="clip_background" format="boolean" />
    </declare-styleable>

</resources>
